[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4"
serde = { versio = "1.0.159", features = ["derive"]}
dotenv = "0.15.0"
config = "0.13.3"
